# synthgen-client

./: .gitignore  README.md  batch_results.parquet  pyproject.toml  requirements.txt
src/: llm_call.py  test.py
src/synthgen/: __init__.py  async_client.py  client.py  models.py  sync_client.py
tests/: test.py  test_client.py
