[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthgen"
version = "0.1.0"
description = "A Python client library for the Synthetic Data Generation API"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["synthetic", "data", "generation", "api", "client"]
dependencies = ["httpx==0.28.1", "pydantic==2.10.6"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/synthgen"
Repository = "https://github.com/yourusername/synthgen.git"
Documentation = "https://github.com/yourusername/synthgen#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/synthgen"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
